ec2_terraform/modules/ec2/security_group.tf
resource "aws_security_group" "my-web-app" {
  name        = var.security_group
  description = var.security_group

  // To Allow SSH Transport
  ingress {
    from_port   = 22
    protocol    = "tcp"
    to_port     = 22
    cidr_blocks = ["0.0.0.0/0"]
  }
  ingress {
    from_port   = 80
    protocol    = "tcp"
    to_port     = 80
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name = "my-web-app-sg"
  }

  lifecycle {
    create_before_destroy = true
  }
}
